k8s/environment/overlays/staging/namespace.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: nova-staging
  labels:
    goldilocks.fairwinds.com/enabled: "true"
