k8s/environment/overlays/staging/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-service
  labels:
    name: ingress-service
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod

    nginx.ingress.kubernetes.io/proxy-body-size: 1G
    nginx.ingress.kubernetes.io/proxy-connect-timeout: 10
    nginx.ingress.kubernetes.io/proxy-send-timeout: 3600
    nginx.ingress.kubernetes.io/proxy-read-timeout: 3600
    nginx.ingress.kubernetes.io/proxy-next-upstream-timeout: 3600
    ## nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  defaultBackend:
    service:
      name: frontend-svc
      port:
        number: 3000
  rules:
    - host: frontend.staging.novalearn.org
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: frontend-svc
                port:
                  number: 3000
    - host: backend.staging.novalearn.org
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: backend-svc
                port:
                  number: 8000
    - host: admin.staging.novalearn.org
      http:
        paths:
          - path: "/"
            pathType: Prefix
            backend:
              service:
                name: admin-svc
                port:
                  number: 3000

  tls:
    - hosts:
        - frontend.staging.novalearn.org
        - admin.staging.novalearn.org
        - backend.staging.novalearn.org
      secretName: novalearn-staging-tls
